<resources>
    <string name="app_name">LiteVerveLife</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>

    <string name="gatt_disconnected_timeout">По таймауту произошло отключение</string>
    <string name="gatt_successful_connection">Подключение прошло успешно!</string>


    <string name="name_headphones">AppVerveOnes</string>
    <string name="start_search_bt">Старт поиска</string>
    <string name="searched_successful_bt">Одно из устройств найдено!</string>
    <string name="searched_only_one_bt">Найдено, только одно из двух устройств!Перезагрузите наушники и попробуйте ещё раз</string>
    <string name="turn_off_and_repeat">Ни одно из устройств не найдено.Перезагрузите наушники и попробуте ещё раз.</string>
    <string name="successful_both_devices_found">Поиск закончен успешно, оба устройства найдены</string>

    <string name="eq_setting_live">Live</string>
    <string name="eq_setting_moto">Moto-Sound</string>
    <string name="eq_setting_rh">Rhythm</string>
    <string name="eq_setting_ba">Balanced</string>
    <string name="eq_setting_bass">Bass</string>
    <string name="eq_setting_br">Brilliant</string>



    <string name="status_gatt_dis">ОТКЛЮЧЕНО</string>

    <string name="status_gatt_con">ПОДКЛЮЧЕНО</string>

    <string name="ear_detect_tv">Распознавание уха</string>
    <string name="pass_through_audio_tv">Сквозной аудио канал</string>
    <string name="sound_eq_preset_tv">Звуковой эквалайзер.</string>
    <string name="video_eq_preset_tv">Видео эквалайзер</string>
    <string name="searchButton">Поиск</string>
    <string name="connectGat">Подключение</string>
    <string name="label_status_tv">:Статус:</string>
    <string name="label_settings_tv">Настройки</string>


</resources>
