<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.prodigy.litevervelife.MainActivity"
    tools:showIn="@layout/app_bar_main"
    tools:layout_editor_absoluteY="81dp"
    tools:layout_editor_absoluteX="0dp">

    <TextView
        android:id="@+id/battery_slave_tv"
        style="@android:style/Widget.DeviceDefault.TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="60dp"
        android:layout_weight="1"
        android:allowUndo="false"
        android:gravity="center"
        android:lines="1"
        android:text="%"
        android:textColor="@color/colorAccent"
        android:textColorLink="@color/colorPrimary"
        android:textSize="18sp"
        android:textStyle="bold"
        android:typeface="normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.484"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/ip_master_tv"
        tools:ignore="UnusedAttribute"
        tools:style="@style/Base.Widget.AppCompat.Button.Colored" />

    <TextView
        android:id="@+id/battery_master_tv"
        style="@android:style/Widget.DeviceDefault.TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:allowUndo="false"
        android:gravity="center"
        android:lines="1"
        android:text="%"
        android:textColor="@color/colorAccent"
        android:textColorLink="@color/colorPrimary"
        android:textSize="18sp"
        android:textStyle="bold"
        android:typeface="normal"
        tools:ignore="UnusedAttribute"
        tools:style="@style/Base.Widget.AppCompat.Button.Colored"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/ip_slave_tv"
        app:layout_constraintHorizontal_bias="0.46"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="60dp" />

    <TextView
        android:id="@+id/ip_master_tv"
        style="?android:attr/buttonStyleInset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        app:layout_constraintRight_toLeftOf="@+id/ip_slave_tv"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="50dp" />

    <TextView
        android:id="@+id/ip_slave_tv"
        style="?android:attr/buttonStyleInset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/ip_master_tv"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="50dp" />

    <TextView
        android:id="@+id/settings_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="122dp"
        android:text="@string/label_settings_tv"
        android:textSize="24sp"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/ear_detect_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ear_detect_tv"
        android:textSize="18sp"
        app:layout_constraintRight_toLeftOf="@+id/ear_detect_switch"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="174dp" />

    <TextView
        android:id="@+id/pass_through_audio_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pass_through_audio_tv"
        android:textSize="18sp"
        app:layout_constraintRight_toLeftOf="@+id/pass_through_audio_switch"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="237dp" />

    <Switch
        android:id="@+id/ear_detect_switch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:enabled="false"
        app:layout_constraintLeft_toRightOf="@+id/ear_detect_tv"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="174dp" />

    <Switch
        android:id="@+id/pass_through_audio_switch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:enabled="false"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/pass_through_audio_tv"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="237dp" />

    <Spinner
        android:id="@+id/sound_eq_preset_spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:entries="@array/eq_setting_name_array"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/sound_eq_preset_tv"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="289dp" />

    <Spinner
        android:id="@+id/video_eq_preset_spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:entries="@array/eq_setting_name_array"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/video_eq_preset_tv"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="344dp" />

    <TextView
        android:id="@+id/sound_eq_preset_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:enabled="false"
        android:text="@string/sound_eq_preset_tv"
        android:textSize="18sp"
        app:layout_constraintRight_toLeftOf="@+id/sound_eq_preset_spinner"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="291dp" />

    <TextView
        android:id="@+id/video_eq_preset_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:enabled="false"
        android:text="@string/video_eq_preset_tv"
        android:textSize="18sp"
        app:layout_constraintRight_toLeftOf="@+id/video_eq_preset_spinner"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="344dp" />

    <Button
        android:id="@+id/searchButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:enabled="true"
        android:onClick="GlobalButtonClickListener"
        android:text="@string/searchButton"
        app:layout_constraintLeft_toRightOf="@+id/connectGat"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/connectGat"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginTop="32dp"
        android:enabled="false"
        android:onClick="GlobalButtonClickListener"
        android:text="@string/connectGat"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/searchButton"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/label_status_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_status_tv"
        android:textSize="24sp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="118dp" />

    <TextView
        android:id="@+id/status_slave_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="123dp"
        android:lines="1"
        android:text=""
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.462"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/label_status_tv" />

    <TextView
        android:id="@+id/status_master_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="123dp"
        android:text=""
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.333"
        app:layout_constraintLeft_toRightOf="@+id/label_status_tv"
        app:layout_constraintRight_toRightOf="parent" />

</android.support.constraint.ConstraintLayout>
